tests/suite/snapshots/suite__check__tests__check__bad-pa3-12.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-pa3-12.xi:2:9]
   │
 2 │ bar() { x:int = foo() }
   ·         ──────┬──────  
   ·               ╰──────── Cannot initialize with a procedure
───╯

